Actualización de documentación y código

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivia</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="main.js"></script>
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trivia grupo 4</title>
+</head>
+<body>
+<div>
+  <h1>Titulo</h1>
+  <p>Descripcion</p>
+</div>
+<div>
+  <form action="#" method="post">
+    <h2>¿pregunta 1?</h2>
+
+    <input type="radio" name="respuesta1" id="respuesta1">
+    <label for="respuesta1">Respuesta 1 ☑☒ </label><br>
+
+    <input type="radio" name="respuesta1" id="respuesta2">
+    <label for="respuesta2">Respuesta 2 ☑☒</label><br>
+
+    <input type="radio" name="respuesta1" id="respuesta3">
+    <label for="respuesta3">Respuesta 3 ☑☒</label><br><br>
+
+    <h2>¿pregunta 2?</h2>
+
+    <input type="radio" name="respuesta2" id="respuesta4">
+    <label for="respuesta4">Respuesta 4 ☑☒</label><br>
+
+    <input type="radio" name="respuesta2" id="respuesta5">
+    <label for="respuesta5">Respuesta 5 ☑☒</label><br>
+
+    <input type="radio" name="respuesta2" id="respuesta6">
+    <label for="respuesta6">Respuesta 6 ☑☒</label><br><br><br>
+
+
+    <button>Enviar respuesta</button>
+
+  </form>
+</div>
+</body>
 </html>
